--- a/Assets/css/style_homepage.css
+++ b/Assets/css/style_homepage.css
@@ -1,8 +1,8 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-} */
+}
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -986,9 +986,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 40px;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
 /* Top row with horizontal layout */
@@ -997,7 +994,6 @@ body {
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 80px;
-  
 }
 
 .top_feature {
@@ -1006,7 +1002,6 @@ body {
   align-items: center;
   flex-basis: 45%;
   gap: 15px;
-  box-sizing: border-box;
 }
 
 .top_feature .feature_icon img{
